Fix missing spark image

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-dbt-spark[PyHive]==1.8.2
+dbt-spark[PyHive]==1.9.3
 pyspark==3.5.0
-pyhive[hive]==0.7.0
-sasl==0.3.1
+pyhive==0.7.0
 thrift==0.16.0
-thrift-sasl==0.4.3
-
+pure-sasl==0.6.2
