--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,13 @@ services:
       - spark-network
 
   spark-master:
-    image: bitnami/spark:3.5
+    image: apache/spark:3.5.0
     container_name: pycon25-spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
     environment:
-      - SPARK_MODE=master
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - SPARK_MASTER_HOST=spark-master
+      - SPARK_MASTER_PORT=7077
+      - SPARK_MASTER_WEBUI_PORT=8080
     ports:
       - "8080:8080"
       - "7077:7077"
@@ -32,46 +31,49 @@ services:
       - spark-network
 
   spark-worker:
-    image: bitnami/spark:3.5
+    image: apache/spark:3.5.0
     container_name: pycon25-spark-worker
     depends_on:
       - spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark-master:7077
       - SPARK_WORKER_MEMORY=2g
       - SPARK_WORKER_CORES=2
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - SPARK_WORKER_WEBUI_PORT=8081
+    ports:
+      - "8081:8081"
     volumes:
       - ./data:/data
     networks:
       - spark-network
 
   spark-thrift:
-    image: bitnami/spark:3.5
+    image: apache/spark:3.5.0
     container_name: pycon25-spark-thrift
     depends_on:
       - spark-master
       - spark-worker
     environment:
-      - SPARK_MODE=thrift
-      - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - SPARK_NO_DAEMONIZE=true
+      - SPARK_MASTER=spark://spark-master:7077
+      - SPARK_SQL_WAREHOUSE_DIR=/data/warehouse
+    command: >
+      /bin/bash -c "
+      /opt/spark/sbin/start-thriftserver.sh
+      --master spark://spark-master:7077
+      --conf spark.sql.warehouse.dir=/data/warehouse &&
+      tail -f /opt/spark/logs/*
+      "
     ports:
       - "10000:10000"
+      - "4040:4040"
     volumes:
       - ./data:/data
     networks:
       - spark-network
 
   sqlpad:
-    image: sqlpad/sqlpad:latest
+    image: sqlpad/sqlpad:7.5.7
     container_name: pycon25-sqlpad
     depends_on:
       - spark-thrift
