--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,8 +1,8 @@
-name: "pycon25_spark_demo"
+name: "pycon25_duckdb_demo"
 version: "1.0.0"
 config-version: 2
 
-profile: pycon25_spark
+profile: pycon25_duckdb
 
 model-paths: ["models"]
 test-paths: ["tests"]
@@ -10,7 +10,7 @@ macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
 models:
-  pycon25_spark_demo:
+  pycon25_duckdb_demo:
     +materialized: view
     +post-hook:
       - "{{ log_processed_data(this) }}"
