--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   dbt:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dbt
     container_name: pycon25-dbt
     working_dir: /app
     volumes:
@@ -28,10 +30,11 @@ services:
     command:
       [
         "marimo",
-        "run",
+        "edit",
         "scripts/visualize_revenue.py",
         "--host",
         "0.0.0.0",
         "-p",
         "8080",
+        "--no-token",
       ]
