--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,25 @@ services:
         "8080",
         "--no-token",
       ]
+
+  dbt-docs:
+    build:
+      context: .
+      dockerfile: Dockerfile.dbt
+    container_name: pycon25-dbt-docs
+    working_dir: /app
+    volumes:
+      - ./:/app
+      - ./data:/data
+    ports:
+      - "8081:8080"
+    environment:
+      DBT_PROFILES_DIR: /app/profiles
+    depends_on:
+      - dbt
+    command:
+      [
+        "sh",
+        "-c",
+        "dbt --profile pycon25_duckdb docs generate && dbt --profile pycon25_duckdb docs serve --host 0.0.0.0 --port 8080",
+      ]
